Fix header alignments

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,7 +7,6 @@
   font-family: 'Oswald', sans-serif;
   z-index: 999;
   background-color: white;
-  margin-right: 7px;
 }
 
 .header-left {
